trying docker ubuntu seems isseus with is_empty and pile_types

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -3,6 +3,8 @@ sol:
 	$(CC) -o solitaire -DUNICODE -Wall main.c -lncursesw -ltinfo
 debug:
 	$(CC) -g -o solitaire -DUNICODE -Wall main.c -lncursesw -ltinfo
+dascii:
+	$(CC) -g -o solitaire -DUNICODE -Wall main.c -lncursesw -ltinfo
 ascii:
 	$(CC) -o solitaire -Wall main.c -lncursesw -ltinfo
 
