--- a/myTest/Makefile
+++ b/myTest/Makefile
@@ -1,11 +1,15 @@
-CC=cc
-passR: passR.c
-	$(CC) -g -o passR -DUNICODE -Wall passR.c -lncursesw -ltinfo
-nodebug: passR.c
-	$(CC)    -o passR -DUNICODE -Wall passR.c -lncursesw -ltinfo
-nodascii: passR.c
-	$(CC)    -o passR           -Wall passR.c -lncursesw -ltinfo
-ascii: passR.c
-	$(CC) -g -o passR           -Wall passR.c -lncursesw -ltinfo
+# http://web.cse.ohio-state.edu/~reeves.92/CSE2421au12/SlidesDay22.pdf
+CC=gcc
+
+all: passR
+
+passR: passR.o loadLinkList.o
+	$(CC) -g -o passR loadLinkList.o passR.o -DUNICODE -Wall -lncursesw -ltinfo
+loadLinkList.o : loadLinkList.c
+	$(CC)    -c loadLinkList.c
+passR.o : passR.c
+	$(CC)    -c passR.c
 clean: 
-	rm -f passR 
+	rm -rf passR *.o 
+run:
+	./passR
